feat(service): refactor room & roomType services
Refactor the `RoomService` and `RoomTypeService` to use the new
`makeRoomResponse` and `makeRoomTypeResponse` helper methods for
consistent response creation. This makes the code more maintainable and
easier to understand.

This change also introduces the `getRoomTypeById_entity` method in the
`RoomTypeService` to retrieve a RoomType entity by ID, simplifying
interactions with the service.